--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,6 @@
     font-family: sans-serif;
 }
 
-
-
 /* ======
 navbar style 
 ========== */
@@ -34,6 +32,10 @@ nav ul li{
 nav ul li a{
     color: #3C3C3C;
     font-weight: bold;
+}
+nav ul li a:hover{
+    color: #FA804C;
+    font-size: 22px;
 }
 .menu-btn{
     display: none;
@@ -206,6 +208,11 @@ footer section style
     -moz-box-shadow: 3px 7px 19px -7px rgba(0,0,0,0.46);
     border-radius: 15px;
 }
+.f-card{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 .f-card-icon img{
     width: 80px;
 }
@@ -222,7 +229,9 @@ footer section style
     color: #001C45;
     font-weight: 200;
 }
-
+.f-img{
+    width: 90%;
+}
 
 
 /* =================
@@ -236,17 +245,31 @@ footer section style
 @media (max-width: 575.98px) { 
     .menu-btn{
         position: fixed;
-        right: 30px;
+        right: 60px;
         display: block;
+        font-size: 26px;
     }
     .logo{
         position: fixed;
         left: 10px;
     }
+    .logo img{
+        width: 250px;
+    }
     .banner{
         display: flex;
         flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
         height: 650px;
+        width: 100%;
+    }
+    .ban-info{
+        display: grid;
+        flex-direction: column;
+        margin-left: 20px;
+        align-items: center;
+        background-color: #FFF9F4;
     }
    .ban-img{
     width: 100%;
@@ -255,18 +278,50 @@ footer section style
     align-items: center;
    }
    .card-title h1{
-    display: grid;
+    text-align: center;
+   }
+   .card-row-1{
+    display: flex;
     justify-content: center;
     align-items: center;
    }
-   .card-row-1{
-    display: grid;
+   .card-row-2{
+    display: flex;
     justify-content: center;
     align-items: center;
-    grid-gap: 30px;
+    margin-bottom: 250px;
    }
 
    .footer-info{
+    height: auto;
+   }
+   .footer-cards{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 150px;
+    margin-top: 80px;
+   }
+   .f-card{
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 95%;
+   }
+   .f-card-info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+   }
+   .f-img{
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+   }
+
+   /* .footer-info{
     display: flex;
     flex-direction: column-reverse;
    }
@@ -291,7 +346,7 @@ footer section style
     justify-content: center;
     align-items: center;
     grid-gap: 20px;
-   }
+   } */
     
  }
 
